refactor: Dto 메서드 명 변경 및 Dto 반환 값 수정